# risc0

./: Cargo.toml  WORKSPACE
examples/rust/battleship/contract/src/: lib.rs
examples/rust/battleship/core/src/: lib.rs
examples/rust/battleship/methods/: build.rs
examples/rust/battleship/methods/src/: lib.rs
examples/rust/battleship/web/client/src/: board.rs  game.rs
examples/rust/battleship/web/server/: Cargo.toml
examples/rust/digital_signature/core/: BUILD.bazel
examples/rust/digital_signature/core/src/: lib.rs
examples/rust/digital_signature/src/: sign.rs
risc0/zkp/verify/: fri.cpp
risc0/zkvm/sdk/rust/host/: Cargo.toml
