# TODO: incomplete WIP

[package]
name = "risc0-zkvm-host"
version = "0.1.0"
edition = "2021"
description = "RISC Zero zero-knowledge VM host crate"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0/"

[dependencies]
ctor = "0.1"
log = "0.4"
risc0-zkvm-core = { version = "0.2", path = "../core" }
